src/test/ui/closure_context/issue-42065.stderr
error[E0382]: use of moved value: `debug_dump_dict`
  --> $DIR/issue-42065.rs:21:5: in fn main
   |
LL |     debug_dump_dict();
   |     --------------- value moved here
LL |     debug_dump_dict();
   |     ^^^^^^^^^^^^^^^ value used here after move
   |
note: closure cannot be invoked more than once because it moves the variable `dict` out of its environment
  --> $DIR/issue-42065.rs:16:29: in fn main
   |
LL |         for (key, value) in dict {
   |                             ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
